fixed scaling issues, mainly due to font size being too large on smaller displays

--- a/css/styles.css
+++ b/css/styles.css
@@ -1198,11 +1198,11 @@ textarea {
     }
 
     html {
-        font-size: 15px;
+        font-size: 10px;
     }
 
     h4 {
-        font-size: 16px;
+        font-size: 1.6rem;
     }
 
     #navbar {
@@ -1297,10 +1297,8 @@ textarea {
     /* ... */
 }
 
-@media (max-width: 1174px) {}
-
 /* Small desktops (1024px+) */
-@media (max-width: 1030px) {
+@media (max-width: 1174px) {
 
     p {
         font-size: 16px;
